--- a/march 2020/march 2020/march 2020.vcxproj.filters
+++ b/march 2020/march 2020/march 2020.vcxproj.filters
@@ -87,5 +87,11 @@
     <ClCompile Include="2309.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1076.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1107.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
