--- a/march 2020/march 2020/march 2020.vcxproj.filters
+++ b/march 2020/march 2020/march 2020.vcxproj.filters
@@ -159,5 +159,8 @@
     <ClCompile Include="2583_bfs.cpp">
       <Filter>소스 파일\graph\bfs</Filter>
     </ClCompile>
+    <ClCompile Include="7576_bfs.cpp">
+      <Filter>소스 파일\graph\bfs</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
