--- a/march 2020/march 2020/march 2020.vcxproj.filters
+++ b/march 2020/march 2020/march 2020.vcxproj.filters
@@ -210,5 +210,17 @@
     <ClCompile Include="13459.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1759.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="13908.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1261.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14500.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
